src/objects/Additional_Product__c.object
<CustomObject>
    <description>Object created in R5 to store new products related to a case which can later get updated from ServIS</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Additional Products</relationshipLabel>
        <relationshipName>Additional_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>The city or nearest city where this site is located.</inlineHelpText>
        <label>Site City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissioning_Date__c</fullName>
        <inlineHelpText>The date when the installation was commissioned.</inlineHelpText>
        <label>Commissioning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <inlineHelpText>The name of the country where the site is located. The name represents the current official political status of the country according to ISO 3166-1 standard.</inlineHelpText>
        <label>Site Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Warranty_enddate__c</fullName>
        <inlineHelpText>The date when the customer warranty for the Installation ends.</inlineHelpText>
        <label>Customer Warranty end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Warranty_startdate__c</fullName>
        <inlineHelpText>The date when the customer warranty for the Installation starts.</inlineHelpText>
        <label>Customer Warranty start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geo_coordinates__c</fullName>
        <label>Geo-coordinates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_ID__c</fullName>
        <inlineHelpText>Unique identifier of the installation within ServIS. Generated automaticaly by ServIS.</inlineHelpText>
        <label>Installation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_status__c</fullName>
        <inlineHelpText>Installation Status (e.g. Planned, Delivered, Running).</inlineHelpText>
        <label>Installation status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <inlineHelpText>Legacy brand. Use the naming convention &quot;brand-city country code&quot;. E.g. &quot;Westinghouse - Munice, US&quot;, &quot;ABB - Turgi, CH&quot;.</inlineHelpText>
        <label>Manufacturer</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Date__c</fullName>
        <inlineHelpText>The date when the installation was produced.</inlineHelpText>
        <label>Manufacturing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Order_Number__c</fullName>
        <inlineHelpText>The factory production order reference number for the installation.</inlineHelpText>
        <label>Manufacturing Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Installation__c</fullName>
        <formula>if(
   LEN(Serial_Number__c) &gt;= 3,
   Hyperlink(&quot;https://de-s-0199933.de.abb.com/servis/goto.php?SERIAL=&quot;&amp;Serial_Number__c,
   &apos;Open Installation for Serial Number - &apos;&amp;Serial_Number__c),
 IF(LEN(Purchase_Order__c) &gt; 0, 
Hyperlink(&quot;https://de-s-0199933.de.abb.com/servis/pages/search.php?panel=resultstext&amp;freetext=&quot;&amp;Purchase_Order__c,
&apos;Open Installation for Purchase Order Number - &apos;&amp;Purchase_Order__c),
     if(LEN(Sales_Order_number__c) &gt; 0, 
        Hyperlink(&quot;https://de-s-0199933.de.abb.com/servis/pages/search.php?panel=resultstext&amp;freetext= &quot;&amp;Sales_Order_number__c,&apos;Open Installation for Sales Order Number - &apos; &amp;Sales_Order_number__c),
       &apos;No data available&apos;)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Installation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_GUID__c</fullName>
        <label>Operator GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_Name__c</fullName>
        <label>Operator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Additional Products</relationshipLabel>
        <relationshipName>Additional_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_category_ServIS__c</fullName>
        <inlineHelpText>Installation category. The keywords are defined by Div/Pgs.</inlineHelpText>
        <label>Product category ServIS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Order_number__c</fullName>
        <label>Sales Order number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <externalId>true</externalId>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <inlineHelpText>Address where the site is located. In most cases equals to the postal address.</inlineHelpText>
        <label>Site Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Geo_Location__c</fullName>
        <inlineHelpText>Site geographic longitude and latitude</inlineHelpText>
        <label>Site Geo Location</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Site_Link__c</fullName>
        <formula>if(LEN(Site_id__c)&gt;0,(HYPERLINK(&quot;https://de-s-0199933.de.abb.com/servis/goto.php?&quot;&amp;Site_id__c, &apos;Link to ServIS&apos;)),&apos;No site available&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Name__c</fullName>
        <inlineHelpText>Name of the plant/site/vessel, the &quot;nickname&quot; this plant is known by. In most cases (but not always) it consists of: (Owner name or abbr. + city + Plant Type)</inlineHelpText>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_id__c</fullName>
        <label>Site id</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Status_Formula__c</fullName>
        <formula>if(
   AND(
       NOT(ISNULL(Customer_Warranty_startdate__c)),
       TODAY() &lt; Customer_Warranty_startdate__c
      ),
   &apos;In Future&apos;,
    if(
       AND(
           NOT(ISNULL(Customer_Warranty_startdate__c)),
           NOT(ISNULL(Customer_Warranty_enddate__c)),
           Customer_Warranty_startdate__c &lt;= TODAY(),
           TODAY() &lt;= Customer_Warranty_enddate__c
          ),
      &apos;Active&apos;,
      if(
         AND(
             NOT(ISNULL(Customer_Warranty_enddate__c)),
             TODAY() &gt; Customer_Warranty_enddate__c
            ),
        &apos;Expired&apos;,
        &apos;No Data&apos;
        )
     )
  )</formula>
        <label>Warranty Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_status__c</fullName>
        <label>Warranty status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Additional Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Additional Product  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Customer_Warranty_Validator</fullName>
        <active>true</active>
        <description>Customer Warranty Start date should not greater than Warranty End Date</description>
        <errorConditionFormula>Customer_Warranty_startdate__c &gt; Customer_Warranty_enddate__c</errorConditionFormula>
        <errorMessage>Customer Warranty Start Date must be less than Warranty End Date</errorMessage>
    </validationRules>
</CustomObject>